--- a/css/binaryCalculator.css
+++ b/css/binaryCalculator.css
@@ -4,3 +4,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    width: 30%;
+    margin: auto;
+    background-color: red;
+}
+
+#res{
+    background-color: lightgray;
+    border: 1px solid;
+    height: 48px;
+    font-size: 20px;
+    padding: 5px;
+}
