--- a/css/binaryCalculator.css
+++ b/css/binaryCalculator.css
@@ -18,7 +18,6 @@
 body {
     height: 100vh;
     width: 100vw;
-    border: 1px dashed lightslategray;
     display: flex;
     gap: 10px;
     justify-content: center;
@@ -39,7 +38,8 @@ body {
     padding: 5px;
     cursor: crosshair;
     background-color: var(--bg-button-selected-dark);
-    box-shadow: 1px 1px 7px black;
+    box-shadow: 1px 1px 10px black;
+    /* border: 1px solid grey; */
 }
 
 .btns {
